--- a/App.config
+++ b/App.config
@@ -6,15 +6,15 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="UserinfoServiceSoap1" />
                 <binding name="SalesServiceSoap" />
+                <binding name="UserinfoServiceSoap" />
             </basicHttpBinding>
             <customBinding>
-                <binding name="UserinfoServiceSoap121">
+                <binding name="SalesServiceSoap12">
                     <textMessageEncoding messageVersion="Soap12" />
                     <httpTransport />
                 </binding>
-                <binding name="SalesServiceSoap12">
+                <binding name="UserinfoServiceSoap12">
                     <textMessageEncoding messageVersion="Soap12" />
                     <httpTransport />
                 </binding>
@@ -22,11 +22,11 @@
         </bindings>
         <client>
             <endpoint address="http://192.168.2.206:8088/UserinfoService.asmx"
-                binding="basicHttpBinding" bindingConfiguration="UserinfoServiceSoap1"
-                contract="UserinfoService.UserinfoServiceSoap" name="UserinfoServiceSoap1" />
+                binding="basicHttpBinding" bindingConfiguration="UserinfoServiceSoap"
+                contract="UserinfoService.UserinfoServiceSoap" name="UserinfoServiceSoap" />
             <endpoint address="http://192.168.2.206:8088/UserinfoService.asmx"
-                binding="customBinding" bindingConfiguration="UserinfoServiceSoap121"
-                contract="UserinfoService.UserinfoServiceSoap" name="UserinfoServiceSoap121" />
+                binding="customBinding" bindingConfiguration="UserinfoServiceSoap12"
+                contract="UserinfoService.UserinfoServiceSoap" name="UserinfoServiceSoap12" />
             <endpoint address="http://192.168.2.206:8088/SalesService.asmx"
                 binding="basicHttpBinding" bindingConfiguration="SalesServiceSoap"
                 contract="SalesService.SalesServiceSoap" name="SalesServiceSoap" />
